...
            android:layout_marginLeft="15dp"
            android:text="@string/monitor_current_connection"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/home_switch_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
...
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="26sp"
                android:textColor="?attr/colorOnBackground"
                tools:text="HomeWifi" />

            <ImageView
                android:id="@+id/home_button_connection_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/home_text_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@android:drawable/ic_menu_info_details" />
...
