...
	<string name="log_actions">Actions</string>
	<string name="firstAttack">First Attack:</string>
	<string name="lastAttack">Last Attack:</string>
	<string name="clear">Clear</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="close">Close</string>
	<string name="show_records">Show records</string>
	<string name="dialog_clear_database">Clear all data?</string>	
	<string name="export_dialog_title">Choose Export Format</string>		
	<string name="delete_dialog_title">Delete data sets by:</string>	
	<string name="dialog_clear_database_date">Delete all data before:</string>

...
