<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/dividerVertical"
    android:dividerPadding="12dp"
    android:orientation="horizontal"
    android:showDividers="middle">


    <LinearLayout
        android:id="@+id/action_cancel"
        style="@style/DoneBarActionButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/ic_action_cancel"
            android:tint="?attr/colorOnSurface"/>

        <TextView
            style="@style/DoneBarActionButtonText"
            android:text="@string/discard" />

    </LinearLayout>

    <!-- id must match corresponding menu item id -->
    <LinearLayout
        android:id="@+id/action_done"
        style="@style/DoneBarActionButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/ic_action_done"
            android:tint="?attr/colorOnSurface"/>

        <TextView
            style="@style/DoneBarActionButtonText"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>