<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/list_item_container"
              android:background="@drawable/panel_help_bg"
              android:padding="10dp">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/profile_help_swipe"
			android:id="@+id/txtP2PSearchProgress"
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/imageView"
			android:layout_marginLeft="15dp"
			android:layout_toLeftOf="@+id/profile_manager_help_dismiss"/>

	<ImageView
			android:layout_width="50dp"
			android:layout_height="wrap_content"
			android:id="@+id/imageView"
			android:src="@drawable/ic_swipe_action"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignBottom="@+id/txtP2PSearchProgress"
			android:scaleType="fitCenter"/>

	<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/swipelist_backview">
	</FrameLayout>

	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/profile_manager_help_dismiss"
			android:src="@drawable/ic_action_cancel_dark"
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_alignBottom="@+id/txtP2PSearchProgress"/>

</RelativeLayout>