...
                android:layout_marginTop="20dp"
            android:text="@string/current_connection"
                android:textSize="18dp"
                android:textStyle="bold" />

        <ImageView
                android:id="@+id/services_button_connection_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
...
                android:layout_marginTop="35dp"
            android:text="@string/monitor_services"
                android:textStyle="bold"
                android:textSize="20dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/service_switch_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
...
