...
                android:layout_weight="1"
                android:text="@string/recorded_attacks"
                android:textStyle="bold"
                android:textSize="12dp"/>

        <Switch
                android:id="@+id/services_item_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
...
